test/tests/stages/18_structures/valid/extra_credit/semantic_analysis/decl_shadows_decl.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[4]: 
            CD: 
              CStructDecl: 
                CStructDeclaration: 
                  TIdentifier: tag
                  Bool: 0
                  List[0]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: struct_ptr
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  Pointer: 
                    Structure: 
                      TIdentifier: tag
                      Bool: 0
                  None: 
            CS: 
              CCompound: 
                CB: 
                  List[3]: 
                    CD: 
                      CStructDecl: 
                        CStructDeclaration: 
                          TIdentifier: tag
                          Bool: 1
                          List[0]: 
                    CD: 
                      CVarDecl: 
                        CVariableDeclaration: 
                          TIdentifier: union_ptr
                          CSingleInit: 
                            CConstant: 
                              CConstInt: 
                                TInt: 0
                              None: 
                            None: 
                          Pointer: 
                            Structure: 
                              TIdentifier: tag
                              Bool: 1
                          None: 
                    CS: 
                      CIf: 
                        CBinary: 
                          COr: 
                          CVar: 
                            TIdentifier: struct_ptr
                            None: 
                          CVar: 
                            TIdentifier: union_ptr
                            None: 
                          None: 
                        CCompound: 
                          CB: 
                            List[1]: 
                              CS: 
                                CReturn: 
                                  CConstant: 
                                    CConstInt: 
                                      TInt: 1
                                    None: 
                        None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
