test/tests/stages/18_structures/invalid_types/extra_credit/union_struct_conflicts/union_shadowed_by_incomplete_struct.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CStructDecl: 
                CStructDeclaration: 
                  TIdentifier: tag
                  Bool: 1
                  List[1]: 
                    CMemberDeclaration: 
                      TIdentifier: a
                      Int: 
            CS: 
              CCompound: 
                CB: 
                  List[2]: 
                    CD: 
                      CStructDecl: 
                        CStructDeclaration: 
                          TIdentifier: tag
                          Bool: 0
                          List[0]: 
                    CD: 
                      CVarDecl: 
                        CVariableDeclaration: 
                          TIdentifier: x
                          None: 
                          Pointer: 
                            Structure: 
                              TIdentifier: tag
                              Bool: 1
                          None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
